crates/bsnext_core/src/snapshots/bsnext_core__handler_stack__test__handler_stack_01.snap
---
source: crates/bsnext_core/src/handler_stack.rs
expression: actual
---
Raw {
    raw: Raw {
        raw: "body { background: red }",
    },
    opts: Opts {
        cors: None,
        delay: None,
        watch: Bool(
            true,
        ),
        inject: Bool(
            true,
        ),
        headers: None,
    },
}
