crates/bsnext_core/src/snapshots/bsnext_core__handler_stack__test__handler_stack_02.snap
---
source: crates/bsnext_core/src/handler_stack.rs
expression: actual
---
DirsProxy(
    [
        DirRouteOpts {
            dir_route: DirRoute {
                dir: "another",
                base: None,
            },
            opts: Opts {
                cors: None,
                delay: None,
                watch: Bool(
                    true,
                ),
                inject: Bool(
                    true,
                ),
                headers: None,
                compression: None,
            },
            fallback_route: None,
        },
        DirRouteOpts {
            dir_route: DirRoute {
                dir: "another_2",
                base: None,
            },
            opts: Opts {
                cors: None,
                delay: None,
                watch: Bool(
                    true,
                ),
                inject: Bool(
                    true,
                ),
                headers: None,
                compression: None,
            },
            fallback_route: None,
        },
    ],
    ProxyRoute {
        proxy: "example.com",
    },
)
