crates/bsnext_core/src/snapshots/bsnext_core__handler_stack__test__handler_stack_03.snap
---
source: crates/bsnext_core/src/handler_stack.rs
expression: actual
---
Raw {
    raw: Raw {
        raw: "console.log(\"hello world!\")",
    },
    opts: Opts {
        cors: Some(
            Cors(
                true,
            ),
        ),
        delay: None,
        watch: Bool(
            true,
        ),
        inject: Bool(
            true,
        ),
        headers: None,
    },
}
